# terroir

./: .gitignore  Makefile  README.md
app/: app.py  pyproject.toml
app/.chalice/: config.json  policy.json
app/chalicelib/: __init__.py
infra/: main.tf
