[tool.poetry]
name = "terroir"
version = "0.1.0"
description = "An AWS pattern for rapid app development"
authors = ["Aaron L. L."]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
boto3 = "^1.28.9"
chalice = "^1.29.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
